.pipeline/k8s/prep-nodes.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: kube-system
  name: nodes-injector
  labels:
    k8s-app: nodes-injector
spec:
  selector:
    matchLabels:
      k8s-app: nodes-injector
  template:
    metadata:
      labels:
        k8s-app: nodes-injector
    spec:
      hostPID: true
      hostNetwork: true
      containers:
        - name: wait
          image: k8s.gcr.io/pause:3.1
