.pipeline/k8s/jenkins-ingress.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: jenkins
  annotations:
    # nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    nginx.ingress.kubernetes.io/enable-directory-listing: 'false'
    nginx.ingress.kubernetes.io/limit-connections: '20'
    nginx.ingress.kubernetes.io/limit-rps: '5'
    nginx.ingress.kubernetes.io/server-snippet: |
      if ($scheme !~* ^(http|https)$) { return 444; }
spec:
  ingressClassName: nginx
  rules:
    - host: jenkins.labbi.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
