.pipeline/k8s/nexus.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus
  namespace: nexus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
        - name: nexus
          image: sonatype/nexus3:3.71.0
          resources:
            requests:
              cpu: 1000m
              memory: 1Gi
            limits:
              cpu: 4000m
              memory: 2Gi
          ports:
            - containerPort: 8081
            - containerPort: 5000
          volumeMounts:
            - name: nexus-data
              mountPath: /nexus-data
      volumes:
        - name: nexus-data
          persistentVolumeClaim:
            claimName: nexus-data
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-sonatype-nexus
  namespace: nexus
spec:
  type: ClusterIP
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: nexus
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-docker
  namespace: nexus
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: docker-http
  selector:
    app: nexus
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexus-ingress
  namespace: nexus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'true'
spec:
  rules:
    - host: nexus.labbi.lab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexus-sonatype-nexus
                port:
                  number: 8081
          - path: /v2/
            pathType: Prefix
            backend:
              service:
                name: nexus-docker
                port:
                  number: 5000
