.pipeline/k8s/sonarqube-ingress.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube
spec:
  ingressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: sonar.labbi.lab
      http:
        paths:
          - backend:
              service:
                name: sonarqube-sonarqube
                port:
                  number: 9000
            path: /
            pathType: Prefix
